<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">newtest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="euros_label">Euros</string>
    <string name="dolars_label">Dolars</string>
    <string name="taux_label">Taux</string>
    <string name="button_convert">Convert</string> 
    <string name="button_reset">Reset</string> 
    <string name="button_search">Search</string> 
    <string name="button_update">Update</string> 

</resources> 